--- a/app/src/main/res/layout-land/fragment_settings.xml
+++ b/app/src/main/res/layout-land/fragment_settings.xml
@@ -36,8 +36,7 @@
         android:id="@+id/biperText"
         android:layout_below="@+id/editAlarmEvery"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="39dp" />
+        android:layout_alignParentStart="true" />
 
     <Spinner
         android:id="@+id/biper_spinner"
@@ -46,8 +45,8 @@
         android:background="@android:drawable/btn_dropdown"
         android:spinnerMode="dropdown"
         android:layout_alignTop="@+id/biperText"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignLeft="@+id/editAlarmEvery"
+        android:layout_alignStart="@+id/editAlarmEvery" />
 
     <Button
         android:layout_width="250dp"
